under development
-----------------

* Python 2.2 compatibility fixes.

0.5
---

Initial public release.